# simply-catalog-manager

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: base.Dockerfile  devcontainer.json  poetry-setup.sh
docs/: raw-requirements-definition.md
simply-catalog-manager/: __init__.py  app.py
simply-catalog-manager/data/: categories.json
simply-catalog-manager/src/: category_builder.py
simply-catalog-manager/templates/: categories.html
simply_catalog_manager/: __init__.py  app.py
simply_catalog_manager/data/: categories.json
simply_catalog_manager/templates/: base.html  categories.html
src/: app.py
