[tool.poetry]
name = "simply-catalog-manager"
version = "0.1.0"
description = ""
authors = ["Gustavo Cornejo <g.cornejovivado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simply_catalog_manager"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
