[tool.poetry]
name = "simply-catalog-manager"
version = "0.1.0"
description = ""
authors = ["Gustavo Cornejo <g.cornejovivado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
