[tool.poetry]
name = "simply-catalog-manager"
version = "0.1.0"
description = ""
authors = ["Gustavo Cornejo <g.cornejovivado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
